Create vue register component

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -7,11 +7,12 @@ html, body {
 
 body {
   font-family: 'Dosis', sans-serif;
+  background-color: #19B5FE;  
 }
 
 .content {
   height: 100%;
-  background-color: #19B5FE;
+  /* background-color: #19B5FE; */
 }
 
 .content .container {
@@ -27,6 +28,18 @@ body {
   top: 22%;
   height: 450px;
   width: 320px;
+  margin: 0 auto;
+}
+
+.register-form {
+  background-color: #fff;
+  border-radius: 10px;
+  border-right: 2px solid rgba(71, 161, 197, 0.9);
+  border-bottom: 2px solid rgba(71, 161, 197, 0.9);
+  position: relative;
+  top: 5%;
+  min-height: 740px;
+  min-width: 320px;
   margin: 0 auto;
 }
 
