--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -43,6 +43,18 @@ body {
   margin: 0 auto;
 }
 
+.todo-list {
+  background-color: #fff;
+  border-radius: 10px;
+  border-right: 2px solid rgba(71, 161, 197, 0.9);
+  border-bottom: 2px solid rgba(71, 161, 197, 0.9);
+  position: relative;
+  top: 5%;
+  min-height: 740px;
+  min-width: 320px;
+  margin: 0 auto;
+}
+
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
